--- a/eachHike.html
+++ b/eachHike.html
@@ -42,12 +42,18 @@
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
+  
 
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
+    <div class="container">
+        <h1><span id="hikeName"> this hike</span></h1>
+        <img class="hike-img responsive" src=""/>
+        <div id="details-go-here"></div>
+  </div>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -57,7 +63,11 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAM99.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/eachHike.js"></script>
+
     <!-- <script src="./scripts/script.js"></script> -->
+
+   
 
 </body>
 
